--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,6 +36,15 @@
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
+.mantine-Input-input,
+.mantine-Button-root{
+  min-height: 45px !important;
+}
+
+.mantine-Input-input, .mantine-Checkbox-input{
+  border: 1px solid rgb(188, 187, 187) !important;
+}
+
 @layer base {
   .h1 {
     @apply text-[49px] leading-tight md:text-[65px] md:leading-[1.3] mb-4 font-bold;
@@ -58,7 +67,7 @@
   }
 
   p {
-    @apply leading-[1.3] text-[14px] text-gray-30;
+    @apply leading-[1.3] text-[14px] text-gray-600;
   }
 }
 
@@ -214,6 +223,10 @@
 
   .medium-14 {
     @apply text-[14px] font-[500];
+  }
+  
+  .medium-12 {
+    @apply text-[12.8px] font-[500];
   }
 
   .bold-88 {
